# torch-mate

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: coverage.yml
src/torch_mate/: Dict2Class.py  __init__.py  calc_accuracy.py  disable_torch_debug_apis.py  enumerate_to_device.py  few_shot.py  get_device.py  get_tcn_receptive_field_size.py  iterate_to_device.py  merge_dicts.py  nested_tuple_to_device.py  set_seeds.py  state_dict_ops.py  typing.py
src/torch_mate/data/: DatasetWithViz.py  __init__.py
src/torch_mate/data/datasets/: HASYv2.py  ImageDataset.py  MSWC.py  RandomDataset.py  SPEECHCOMMANDS_35C.py  SpeechCommands_35C.py  __init__.py
src/torch_mate/data/samplers/: DataSampler.py  ImbalancedClassSampler.py  InfiniteClassSampler.py  __init__.py  data_sampler.py  infinite_class_sampler.py
src/torch_mate/data/transforms/: AddNoise.py  DiscreteRandomRotation.py  NormalizeSequence.py  RandomResample.py  RandomVolume.py  TimeShift.py  __init__.py  add_noise.py  cartesian2_polar_coordinates.py  center_crop_or_pad.py  discrete_random_coordinate_rotation.py  permute_sequence.py  random_resample.py  to_int.py
src/torch_mate/data/utils/: Balanced.py  FewShot.py  LabelDependentTransformed.py  PreLoaded.py  RotationExtended.py  Siamese.py  Transformed.py  Triplet.py  __init__.py  balanced.py  get_class_counts.py  get_indices_per_class.py  (+7 more)
src/torch_mate/flow/: README.md  main.py
src/torch_mate/lightning/: ConfigurableLightningDataModule.py  ConfigurableLightningModule.py  README.md  __init__.py  build_trainer_kwargs.py  build_transform.py  cli.py  configuration.py  datasets.py  utils.py
src/torch_mate/loss/: EmpiricalCrossCorrelation.py  __init__.py  segmented_cross_entropy_loss.py  sigmoid_focal_loss.py  stable_max_cross_entropy.py
src/torch_mate/models/: ClassificationLSTM.py  LeNet5BNMaxPool.py  MLP.py  OmniglotCNN.py  __init__.py  classification_rnns.py  le_net5_bn_max_pool.py
src/torch_mate/nn/: Lambda.py  OneHot.py  __init__.py  lambda_fn.py  scale.py  slice.py  transpose.py
src/torch_mate/notebooks/: define_wandb_sweep.ipynb
src/torch_mate/utils/: __init__.py  calc_accuracy.py  configure_cuda.py  count_parameters.py  disable_torch_debug_apis.py  get_class.py  get_class_and_init.py  get_device.py  get_modules.py  get_pin_memory.py  gpu_picker_utils.py  iterate_to_device.py  nested_tuple_to_device.py  segmented_accuracy.py  sensitivity_metric.py  state_dict_ops.py  tuples_to_device.py
test/: test_few_shot.py  test_get_indices_per_class.py  test_imbalanced_class_sampler.py  test_siamese.py  test_triplet.py  utils.py
(+14 files in other folders)
