[project]
name = "torch-mate"
version = "0.0.3"
authors = [
  { name = "Douwe den Blanken" }
]
description = "Multiple tools and scripts developed during MSc thesis at Delft University of Technology for use with the PyTorch machine learning framework"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["tools", "utils", "machine learning", "ml", "ai", "pytorch", "torch", "python"]
dependencies = [
  'numpy',
  'torch',
  'torchvision',
  'matplotlib',
  'tqdm'
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/V0XNIHILI/torch-mate"
"Bug Tracker" = "https://github.com/V0XNIHILI/torch-mate/issues"
