[metadata]
name = torch-mate
version = 0.0.1
author = Douwe den Blanken
description = Various tools/utilities for PyTorch
long_description = Multiple tools and scripts developed during MSc thesis at Delft University of Technology for use with the PyTorch machine learning framework.
keywords = tools, utils, machine learning, ml, ai, pytorch, python

[options]
python_requires = >=3.8
install_requires = 
    numpy
    torch
    torchvision
    matplotlib
    tqdm
    networkx
    hasy
    torchsummary
    early-stopping @ git+https://github.com/V0XNIHILI/early-stopping@main

package_dir=
    =src
packages=find:

[options.packages.find]
where=src
